--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -25,7 +25,7 @@
   <footer>
     Made with ❤️ in Bangalore.
   </footer>
-<script src="index.js" ></script>
+<script src="index1.js" ></script>
 
 </script>
 </body>
